@@ -21,8 +21,8 @@
       "version_requirement": ">= 2.2.0 < 6.0.0"
     },
     {
-      "name": "simp-simplib",
-      "version_requirement": ">= 3.8.0 < 4.0.0"
+      "name": "simp/simplib",
+      "version_requirement": ">= 3.15.0 < 4.0.0"
     }
   ],
   "requirements": [
