@@ -1,17 +1,12 @@
 <%
-
 lpattern = Array.new
-
 Array(@pattern).flatten.each do |ptn|
   if ptn == 'any'
     lpattern.push('ALL')
-  elsif ptn !~ /[[:alpha:]]/
-    lpattern.push(scope.function_bracketize([scope.call_function('simplib::nets2ddq', [ptn])]))
   else
-    lpattern.push(ptn)
+    lpattern.push(scope.call_function('simplib::bracketize',[scope.call_function('simplib::nets2ddq', [ptn])]))
   end
 end
-
 if @svc
   _name = @svc
 else
