@@ -1,3 +1,8 @@
+* Fri Mar 22 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.1.2-0
+- Use simplib::bracketize in lieu of deprecated Puppet 3 bracketize
+- Fix template bug that prevented some IPv6 addresses from being
+  properly formatted in /etc/hosts.allow.
+
 * Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.2-0
 - Use simplib::nets2ddq in lieu of deprecated Puppet 3 nets2ddq
 
